# VideoTransform

./: .gitignore  CMakeLists.txt  README.md
src/: ffmpegwrapper.cpp  ffmpegwrapper.h  mainwindow.cpp  mainwindow.h
